fix card hover cropped problem

--- a/components/card/section-cards.module.css
+++ b/components/card/section-cards.module.css
@@ -15,7 +15,7 @@
 
 .cardWrapper {
   display: flex;
-  /* padding-top: 1.7rem; */
+  padding-top: 1.7rem;
   padding-bottom: 1.5rem;
   margin-top: 1.5rem /* 24px */;
   margin-right: 0.75rem /* 12px */;
@@ -36,7 +36,7 @@
 }
 
 .cardImg:hover {
-  z-index: 50;
+  z-index: 99;
 }
 
 @media (min-width: 768px) {
